add: scores and scoresResult API
